--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,10 @@
       <artifactId>layout</artifactId>
       <version>8.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.5.3</version>
+    </dependency>
   </dependencies>
 </project>
